// file: pkg/config/proto/messages/config_change.proto
// version: 1.0.0
// guid: rs8tuvwx-90y1-2z3a-4b5c-6d7e8f9g0h1i

edition = "2023";

package gcommon.v1.config;

import "google/protobuf/any.proto";
import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/config/proto";

/**
 * Represents a configuration change event.
 * Tracks what changed, when, and who made the change.
 */
message ConfigChange {
  // Unique identifier for this change
  string change_id = 1;

  // Configuration key that changed
  string key = 2;

  // Previous value (if any)
  google.protobuf.Any old_value = 3;

  // New value
  google.protobuf.Any new_value = 4;

  // Type of change (CREATE, UPDATE, DELETE)
  string change_type = 5;

  // Timestamp of the change
  google.protobuf.Timestamp timestamp = 6;

  // User or service that made the change
  string changed_by = 7;

  // Reason for the change
  string reason = 8;

  // Configuration namespace or section
  string namespace = 9;

  // Additional metadata about the change
  map<string, string> metadata = 10;
}
