// file: pkg/config/proto/validation_result.proto
// version: 1.0.0
// guid: 24d2ce27-6b21-4f7b-82f6-2a7b060fe004

edition = "2023";

package gcommon.v1.config;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "pkg/config/proto/audit_operation_type.proto";
import "pkg/config/proto/validation_result_type.proto";
import "pkg/config/proto/validation_severity.proto";
import "pkg/config/proto/approval_status.proto";
import "pkg/config/proto/rollback_method.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/config/proto;configpb";

message ValidationResult {
  // Validation rule name
  string rule_name = 1;

  // Validation result
  ValidationResultType result = 2;

  // Validation message
  string message = 3;

  // Severity level
  ValidationSeverity severity = 4;

  // Field that was validated
  string field = 5;

  // Additional context
  map<string, string> context = 6;
}