// file: pkg/queue/proto/get_topic_info_response.proto
// version: 1.1.0
// Response containing topic information and metadata

edition = "2023";

package gcommon.v1.queue;

import "google/protobuf/timestamp.proto";
import "pkg/queue/proto/topic_stats.proto";
import "pkg/queue/proto/partition_info.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/queue/proto;queuepb";

// GetTopicInfoResponse returns detailed information about a topic
message GetTopicInfoResponse {
  // Topic identifier
  string topic_id = 1;

  // Topic name
  string topic_name = 2;

  // Topic description
  string description = 3;

  // Topic creation timestamp
  google.protobuf.Timestamp created_at = 4;

  // Last modification timestamp
  google.protobuf.Timestamp updated_at = 5;

  // Topic statistics
  TopicStats stats = 6;

  // Partition information
  repeated PartitionInfo partitions = 7;

  // Topic configuration
  TopicConfiguration config = 8;

  // Topic state (active, paused, deleted)
  string state = 9;

  // Access permissions for the requesting user
  TopicPermissions permissions = 10;

  // Topic metadata
  map<string, string> metadata = 11;

  // Topic tags for categorization
  repeated string tags = 12;

  // Owner information
  OwnerInfo owner = 13;

  // Retention policy details
  RetentionInfo retention = 14;
}

// Topic configuration details
message TopicConfiguration {
  // Number of partitions
  int32 partition_count = 1;

  // Replication factor
  int32 replication_factor = 2;

  // Message retention period (seconds)
  int64 retention_period_seconds = 3;

  // Maximum message size (bytes)
  int64 max_message_size_bytes = 4;

  // Compression enabled
  bool compression_enabled = 5;

  // Compression algorithm
  string compression_algorithm = 6;

  // Encryption enabled
  bool encryption_enabled = 7;

  // Cleanup policy (delete, compact)
  string cleanup_policy = 8;

  // Minimum in-sync replicas
  int32 min_insync_replicas = 9;

  // Segment size (bytes)
  int64 segment_size_bytes = 10;
}

// Topic access permissions
message TopicPermissions {
  // Can read messages from topic
  bool can_read = 1;

  // Can write messages to topic
  bool can_write = 2;

  // Can modify topic configuration
  bool can_configure = 3;

  // Can delete the topic
  bool can_delete = 4;

  // Can manage topic permissions
  bool can_manage_permissions = 5;

  // Can view topic statistics
  bool can_view_stats = 6;
}

// Topic owner information
message OwnerInfo {
  // Owner user ID
  string user_id = 1;

  // Owner username
  string username = 2;

  // Owner email
  string email = 3;

  // Organization/team
  string organization = 4;

  // Ownership timestamp
  google.protobuf.Timestamp owned_since = 5;
}

// Topic retention information
message RetentionInfo {
  // Current retention policy
  string retention_policy = 1;

  // Retention period (seconds)
  int64 retention_seconds = 2;

  // Size-based retention limit (bytes)
  int64 retention_bytes = 3;

  // Number of messages retained
  int64 retained_messages = 4;

  // Oldest message timestamp
  google.protobuf.Timestamp oldest_message_time = 5;

  // Next cleanup scheduled time
  google.protobuf.Timestamp next_cleanup_time = 6;
}
