// file: proto/gcommon/v1/config/v1/retry_settings.proto
// version: 1.0.0
// guid: 97d15dc6-ddeb-4e88-a455-16bb8fb5c292

edition = "2023";

package gcommon.v1.common;

import "gcommon/v1/common/backoff_strategy.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/common";

message ConfigRetrySettings {
  // Whether retry is enabled
  bool enabled = 1;

  // Maximum retry count
  int32 max_retries = 2;

  // Retry delay in seconds
  int32 delay_seconds = 3;

  // Retry backoff strategy
  gcommon.v1.common.BackoffStrategy backoff_strategy = 4;

  // Retry conditions
  repeated string conditions = 5;
}
