// file: proto/gcommon/v1/config/v1/config_environment.proto
// version: 1.0.1
// guid: 167ed450-2130-48be-8d18-2ad5bd34cf7e

edition = "2023";

package gcommon.v1.config;

import "gcommon/v1/common/health_status.proto";
import "gcommon/v1/config/environment_status.proto";
import "gcommon/v1/config/environment_type.proto";
import "gcommon/v1/config/messages/approval_workflow.proto";
import "gcommon/v1/config/messages/audit_settings.proto";
import "gcommon/v1/config/messages/backup_policy.proto";
import "gcommon/v1/config/messages/deployment_info.proto";
import "gcommon/v1/config/messages/encryption_settings.proto";
import "gcommon/v1/config/messages/monitoring_config.proto";
import "gcommon/v1/config/messages/promotion_rule.proto";
import "gcommon/v1/config/messages/sync_settings.proto";
import "gcommon/v1/metrics/messages/retention_policy.proto";
import "gcommon/v1/organization/messages/access_control.proto";
import "gcommon/v1/organization/messages/compliance_settings.proto";
import "gcommon/v1/organization/messages/notification_settings.proto";
import "gcommon/v1/organization/messages/resource_limits.proto";
import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
// Config-local types

// Metrics enums referenced by this message

// Organization-scoped settings used by environments

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/config";

message ConfigEnvironment {
  // Unique identifier for the environment
  string environment_id = 1;

  // Environment name
  string name = 2;

  // Environment description
  string description = 3;

  // Environment type
  EnvironmentType type = 4;

  // Environment status
  EnvironmentStatus status = 5;

  // Creation timestamp
  google.protobuf.Timestamp created_at = 6;

  // Last modification timestamp
  google.protobuf.Timestamp updated_at = 7;

  // Environment owner
  string owner = 8;

  // Environment tags
  repeated string tags = 9;

  // Environment metadata
  map<string, string> metadata = 10;

  // Environment configuration
  map<string, string> config = 11;

  // Environment secrets (encrypted)
  map<string, string> secrets = 12;

  // Environment variables
  map<string, string> variables = 13;

  // Parent environment (for inheritance)
  string parent_environment_id = 14;

  // Child environments
  repeated string child_environment_ids = 15;

  // Environment promotion rules
  repeated PromotionRule promotion_rules = 16;

  // Environment access control
  repeated gcommon.v1.organization.OrganizationAccessControl access_controls = 17;

  // Environment deployment info
  DeploymentInfo deployment_info = 18;

  // Environment health status
  gcommon.v1.common.CommonHealthStatus health_status = 19;

  // Environment resource limits
  gcommon.v1.organization.OrganizationResourceLimits resource_limits = 20;

  // Environment backup policy
  BackupPolicy backup_policy = 21;

  // Environment approval workflow
  ApprovalWorkflow approval_workflow = 22;

  // Environment monitoring config
  ConfigMonitoringConfig monitoring_config = 23;

  // Environment retention policy
  gcommon.v1.metrics.MetricsRetentionPolicy retention_policy = 24;

  // Environment compliance settings
  gcommon.v1.organization.OrganizationComplianceSettings compliance_settings = 25;

  // Environment encryption settings
  EncryptionSettings encryption_settings = 26;

  // Environment audit settings
  AuditSettings audit_settings = 27;

  // Environment notification settings
  gcommon.v1.organization.OrganizationNotificationSettings notification_settings = 28;

  // Environment sync settings
  SyncSettings sync_settings = 29;

  // Environment version
  string version = 30;
}
