// file: proto/gcommon/v1/queue/consumer_group_stats.proto
// version: 1.0.0
// guid: b8b6993f-38ea-4912-8d9b-b5d70c3968fc

edition = "2023";

package queue.v1;

import "queue/v1/consumer_error_stats.proto";
import "queue/v1/rebalance_stats.proto";
import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/queue";

message ConsumerGroupStats {
  // Total number of active consumers
  int32 active_consumers = 1 [(buf.validate.field).int32.gte = 0];

  // Total number of assigned partitions
  int32 assigned_partitions = 2 [(buf.validate.field).int32.gte = 0];

  // Total messages consumed by the group
  int64 total_messages_consumed = 3 [(buf.validate.field).int64.gte = 0];

  // Total bytes consumed by the group
  int64 total_bytes_consumed = 4 [(buf.validate.field).int64.gte = 0];

  // Average group consumption rate (messages/second)
  double group_consumption_rate = 5 [(buf.validate.field).double.gte = 0.0];

  // Total group lag
  int64 total_lag = 6 [(buf.validate.field).int64.gte = 0];

  // Rebalance statistics
  RebalanceStats rebalance_stats = 7;

  // Error statistics for the consumer group
  ConsumerErrorStats error_stats = 8;
}
